--- a/.poggit.yml
+++ b/.poggit.yml
@@ -3,3 +3,6 @@ projects:
     path: libkinetic
     type: library
     model: virion
+    libs:
+      - src: SOF3/await-generator/~
+        version: 1.0.0
